--- a/projects/index.html
+++ b/projects/index.html
@@ -199,10 +199,11 @@
     </ul>
   </div>
 
-  <!-- Placeholder figure – replace src with your actual diagram/image later -->
   <figure class="project-figure">
     <img src="/assets/images/projects/sensor-pipeline-placeholder.png" alt="Placeholder diagram of the sensor data conditioning pipeline" />
-    <figcaption>Placeholder diagram – to be replaced with the actual pipeline figure.</figcaption>
+    <figcaption>
+      Placeholder diagram – to be replaced with the actual pipeline figure.
+    </figcaption>
   </figure>
 
 </div>
@@ -229,9 +230,23 @@
     </ul>
   </div>
 
-  <figure class="project-figure">
-    <img src="/assets/images/projects/trainops-placeholder.png" alt="Placeholder visualization of TrainOps scenario comparison" />
-    <figcaption>Placeholder visualization – future space for scenario plots or schema diagrams.</figcaption>
+  <!-- GRID DE 3 IMÁGENES TRAINOPS -->
+  <figure class="project-figure project-figure--grid">
+    <div class="project-figure-grid">
+      <div class="project-figure-grid-item">
+        <img src="/assets/images/projects/trainops-caps-003-2.webp" alt="Freight train on yard used as context image for TrainOps simulation work" />
+      </div>
+      <div class="project-figure-grid-item">
+        <img src="/assets/images/projects/trainops-caps-004.webp" alt="Acceleration, resistance and tractive effort curves from TrainOps simulation" />
+      </div>
+      <div class="project-figure-grid-item">
+        <img src="/assets/images/projects/trainops-caps-009-2.webp" alt="Track elevation and speed profile along simulated route in TrainOps" />
+      </div>
+    </div>
+    <figcaption>
+      Visual material from the TrainOps work: real-world locomotive context (left) and simulation outputs
+      such as speed, acceleration, resistance and elevation profiles (center and right) used for scenario analysis.
+    </figcaption>
   </figure>
 
 </div>
@@ -259,8 +274,10 @@
   </div>
 
   <figure class="project-figure">
-    <img src="/assets/images/projects/failure-mode-placeholder.png" alt="Placeholder ROC / feature-importance plots for failure-mode models" />
-    <figcaption>Placeholder plots – intended for ROC curves, feature importance, or confusion matrices.</figcaption>
+    <img src="/assets/images/projects/failure-mode-placeholder.png" alt="Placeholder ROC and feature-importance plots for failure-mode models" />
+    <figcaption>
+      Placeholder plots – intended for ROC curves, feature importance, or confusion matrices.
+    </figcaption>
   </figure>
 
 </div>
@@ -289,20 +306,20 @@
 <hr />
 
 <style>
-/* Reusar paleta Stanford del Home */
+/* ===== Stanford-style palette (match Home) ===== */
 :root {
   --proj-border: #e5e7eb;
   --proj-text-main: #111827;
   --proj-text-muted: #6b7280;
-  --proj-accent: #8c1515;
+  --proj-accent: #8c1515;  /* Stanford cardinal */
 }
 
-/* Ocultar el título automático de la página y usar nuestro hero */
+/* Hide automatic page title; use our hero instead */
 .page__title {
   display: none;
 }
 
-/* HERO tipo Stanford, alineado a la izquierda */
+/* Hero header (left-aligned, academic) */
 .projects-hero {
   max-width: 760px;
   margin: 0 auto 1.8rem auto;
@@ -333,7 +350,7 @@
   color: var(--proj-text-muted);
 }
 
-/* Intro alineada con el hero */
+/* Intro paragraph aligned with hero width */
 .projects-intro {
   max-width: 760px;
   margin: 1.3rem auto 1.6rem auto;
@@ -342,13 +359,13 @@
   color: #374151;
 }
 
-/* Contenido general: limitar ancho como en Home */
+/* Keep main content constrained like Home */
 .page__content {
   max-width: 760px;
   margin: 0 auto;
 }
 
-/* Encabezados de secciones dentro de Projects */
+/* Section headings inside Projects */
 .page__content h2 {
   margin-top: 2.1rem;
   margin-bottom: 0.8rem;
@@ -357,7 +374,7 @@
   letter-spacing: -0.01em;
 }
 
-/* Bloques de proyecto – estilo limpio, académico */
+/* Project blocks – clean, academic */
 .project-block {
   padding: 1.4rem 0 1.6rem 0;
   border-bottom: 1px solid var(--proj-border);
@@ -399,24 +416,41 @@
   margin-bottom: 0.25rem;
 }
 
-/* Figuras / imágenes (por ahora placeholders) */
+/* Figures / images (TrainOps + placeholders) */
 .project-figure {
   margin: 0.85rem 0 0 0;
 }
 
+/* Single-image style (sensor / failure-mode) */
 .project-figure img {
   max-width: 100%;
   border-radius: 0.4rem;
   border: 1px solid var(--proj-border);
+  margin-top: 0.3rem;
 }
 
 .project-figure figcaption {
   margin-top: 0.35rem;
-  font-size: 0.8rem;
+  font-size: 0.78rem;
   color: var(--proj-text-muted);
+  line-height: 1.45;
 }
 
-/* Sección adicional */
+/* GRID específico para TrainOps */
+.project-figure--grid .project-figure-grid {
+  display: grid;
+  gap: 0.6rem;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+.project-figure-grid-item img {
+  width: 100%;
+  display: block;
+  border-radius: 0.4rem;
+  border: 1px solid var(--proj-border);
+}
+
+/* Additional work section */
 .project-small-list {
   font-size: 0.94rem;
   line-height: 1.6;
@@ -433,7 +467,7 @@
   font-style: italic;
 }
 
-/* Móvil */
+/* Mobile tweaks */
 @media (max-width: 600px) {
   .projects-title {
     font-size: 1.8rem;
